--- a/projects/editor/src/lib/field-drag-drop/field-drop-overlay/field-drop-overlay.component.html
+++ b/projects/editor/src/lib/field-drag-drop/field-drop-overlay/field-drop-overlay.component.html
@@ -3,12 +3,13 @@
     [style.width.%]="dropWidth.left"
     [class.hovering]="hoverPosition === 'left'"
 ></div>
-<div
-    *ngIf="dropWidth.center"
-    class="dropzone"
-    [style.width.%]="dropWidth.center"
-    [class.hovering]="hoverPosition === 'center'"
-></div>
+@if (dropWidth.center) {
+    <div
+        class="dropzone"
+        [style.width.%]="dropWidth.center"
+        [class.hovering]="hoverPosition === 'center'"
+    ></div>
+}
 <div
     class="dropzone"
     [style.width.%]="dropWidth.right"
