--- a/projects/editor/src/lib/property/validators-property/validators-property.component.html
+++ b/projects/editor/src/lib/property/validators-property/validators-property.component.html
@@ -5,36 +5,39 @@
                 <span>{{ property.name || property.key }}</span>
                 <span>{{ '{ ' + validationConfigs.length + ' }' }}</span>
             </span>
-            <button
-                *ngIf="addOptions.length"
-                mat-icon-button
-                [matMenuTriggerFor]="addMenu"
-                (click)="$event.stopPropagation()"
-            >
-                <mat-icon>add</mat-icon>
-            </button>
+            @if (addOptions.length) {
+                <button
+                    mat-icon-button
+                    [matMenuTriggerFor]="addMenu"
+                    (click)="$event.stopPropagation()"
+                >
+                    <mat-icon>add</mat-icon>
+                </button>
+            }
         </span>
     </mat-expansion-panel-header>
-    <editor-object-property
-        *ngFor="let config of validationConfigs; let i = index; trackBy: trackByConfigName"
-        [target]="config.data"
-        [property]="config.property"
-        [showCount]="false"
-        (remove)="onRemoveChild(i)"
-        (targetChanged)="onChildChanged($event, i)"
-    >
-    </editor-object-property>
+    @for (config of validationConfigs; track config.data.name; let i = $index) {
+        <editor-object-property
+            [target]="config.data"
+            [property]="config.property"
+            [showCount]="false"
+            (remove)="onRemoveChild(i)"
+            (targetChanged)="onChildChanged($event, i)"
+        >
+        </editor-object-property>
+    }
 </mat-expansion-panel>
 
 <mat-menu
     #addMenu="matMenu"
     class="editor-mat"
 >
-    <button
-        *ngFor="let option of addOptions"
-        mat-menu-item
-        (click)="onAddChild(option)"
-    >
-        {{ option.name }}
-    </button>
+    @for (option of addOptions; track option.key) {
+        <button
+            mat-menu-item
+            (click)="onAddChild(option)"
+        >
+            {{ option.name }}
+        </button>
+    }
 </mat-menu>
