--- a/projects/editor/src/lib/json-dialog/json-dialog.component.html
+++ b/projects/editor/src/lib/json-dialog/json-dialog.component.html
@@ -1,20 +1,26 @@
 <h2 mat-dialog-title>{{ data.title }}</h2>
 <mat-dialog-content>
     <form #form="ngForm">
-        <mat-form-field *ngIf="data.name">
-            <mat-label>Name</mat-label>
-            <input
-                #nameModel="ngModel"
-                ngModel
-                name="name"
-                matInput
-                required
-                [pattern]="data.name.pattern"
-                [placeholder]="data.name.placeholder"
-            />
-            <mat-error *ngIf="nameModel.errors?.required">This field is required</mat-error>
-            <mat-error *ngIf="nameModel.errors?.pattern">Invalid pattern</mat-error>
-        </mat-form-field>
+        @if (data.name) {
+            <mat-form-field>
+                <mat-label>Name</mat-label>
+                <input
+                    #nameModel="ngModel"
+                    ngModel
+                    name="name"
+                    matInput
+                    required
+                    [pattern]="data.name.pattern"
+                    [placeholder]="data.name.placeholder"
+                />
+                @if (nameModel.errors?.required) {
+                    <mat-error>This field is required</mat-error>
+                }
+                @if (nameModel.errors?.pattern) {
+                    <mat-error>Invalid pattern</mat-error>
+                }
+            </mat-form-field>
+        }
         <div class="json-field-wrapper">
             <mat-form-field class="json-field">
                 <mat-label>JSON</mat-label>
@@ -28,10 +34,14 @@
                     editorJsonValidator
                     [mode]="'application/json'"
                 ></editor-text-editor>
-                <mat-error *ngIf="jsonModel.errors?.required">This field is required</mat-error>
-                <mat-error *ngIf="jsonModel.errors?.jsonFormat">Invalid JSON</mat-error>
+                @if (jsonModel.errors?.required) {
+                    <mat-error>This field is required</mat-error>
+                }
+                @if (jsonModel.errors?.jsonFormat) {
+                    <mat-error>Invalid JSON</mat-error>
+                }
             </mat-form-field>
-            <ng-container *ngIf="data.canSelectFile">
+            @if (data.canSelectFile) {
                 <button
                     class="file-select-button"
                     mat-button
@@ -49,7 +59,7 @@
                     [accept]="'.json, .txt'"
                     (input)="onFileChanged()"
                 />
-            </ng-container>
+            }
         </div>
     </form>
 </mat-dialog-content>
