--- a/projects/editor/src/lib/property/input-property/input-property.component.html
+++ b/projects/editor/src/lib/property/input-property/input-property.component.html
@@ -1,32 +1,31 @@
-<editor-tree-item
-    *ngIf="treeMode; else simplifiedView"
-    [treeLevel]="treeLevel"
-    [hasOptions]="hasOptions"
-    [optionsMenu]="optionsMenu"
->
-    <ng-container headerContent>
-        <editor-property-key
-            [key]="property.key"
-            [isEditable]="property.isKeyEditable"
-            (keyChange)="onKeyChanged($event)"
-        >
-            <span>:</span>
-        </editor-property-key>
-        <mat-form-field
-            class="property-field"
-            appearance="outline"
-            subscriptSizing="dynamic"
-        >
-            <input
-                matInput
-                [formControl]="formControl"
-                [type]="property.type | lowercase"
-            />
-        </mat-form-field>
-    </ng-container>
-</editor-tree-item>
-
-<ng-template #simplifiedView>
+@if (treeMode) {
+    <editor-tree-item
+        [treeLevel]="treeLevel"
+        [hasOptions]="hasOptions"
+        [optionsMenu]="optionsMenu"
+    >
+        <ng-container headerContent>
+            <editor-property-key
+                [key]="property.key"
+                [isEditable]="property.isKeyEditable"
+                (keyChange)="onKeyChanged($event)"
+            >
+                <span>:</span>
+            </editor-property-key>
+            <mat-form-field
+                class="property-field"
+                appearance="outline"
+                subscriptSizing="dynamic"
+            >
+                <input
+                    matInput
+                    [formControl]="formControl"
+                    [type]="property.type | lowercase"
+                />
+            </mat-form-field>
+        </ng-container>
+    </editor-tree-item>
+} @else {
     <mat-form-field subscriptSizing="dynamic">
         <mat-label>{{ property.name ? property.name : property.key }}</mat-label>
         <input
@@ -36,16 +35,17 @@
             [placeholder]="property.placeholder"
         />
     </mat-form-field>
-</ng-template>
+}
 
 <mat-menu #optionsMenu="matMenu">
-    <button
-        *ngIf="property.isRemovable"
-        mat-menu-item
-        color="warn"
-        (click)="remove.emit()"
-    >
-        <mat-icon>remove</mat-icon>
-        <span>Remove</span>
-    </button>
+    @if (property.isRemovable) {
+        <button
+            mat-menu-item
+            color="warn"
+            (click)="remove.emit()"
+        >
+            <mat-icon>remove</mat-icon>
+            <span>Remove</span>
+        </button>
+    }
 </mat-menu>
