--- a/projects/editor/src/lib/tree-item/tree-item.component.html
+++ b/projects/editor/src/lib/tree-item/tree-item.component.html
@@ -2,43 +2,47 @@
     class="header"
     [class.active]="isActive"
 >
-    <span
-        *ngFor="let position of sideLinePositions"
-        class="tree-item-side-line"
-        [style.left.px]="position"
-    ></span>
+    @for (position of sideLinePositions; track position) {
+        <span
+            class="tree-item-side-line"
+            [style.left.px]="position"
+        ></span>
+    }
     <button
         [style.margin-left.px]="treeLevelPadding"
         mat-icon-button
         [disabled]="!isExpandable"
         (click)="onToggle($event)"
     >
-        <mat-icon
-            class="expand-icon"
-            [class.expanded-90]="isExpanded"
-            *ngIf="isExpandable"
-        >
-            chevron_right
-        </mat-icon>
+        @if (isExpandable) {
+            <mat-icon
+                class="expand-icon"
+                [class.expanded-90]="isExpanded"
+            >
+                chevron_right
+            </mat-icon>
+        }
     </button>
     <div class="tree-item-header-content">
         <ng-content select="[headerContent]"></ng-content>
     </div>
-    <button
-        *ngIf="hasOptions"
-        class="tree-item-header-options"
-        [class.visible]="isMouseInside"
-        mat-icon-button
-        [matMenuTriggerFor]="optionsMenu"
-        (click)="$event.stopPropagation()"
+    @if (hasOptions) {
+        <button
+            class="tree-item-header-options"
+            [class.visible]="isMouseInside"
+            mat-icon-button
+            [matMenuTriggerFor]="optionsMenu"
+            (click)="$event.stopPropagation()"
+        >
+            <mat-icon>more_vert</mat-icon>
+        </button>
+    }
+</div>
+@if (isExpandable) {
+    <div
+        [class.children-collapsed]="!isExpanded"
+        [@bodyExpansion]="expansionState"
     >
-        <mat-icon>more_vert</mat-icon>
-    </button>
-</div>
-<div
-    *ngIf="isExpandable"
-    [class.children-collapsed]="!isExpanded"
-    [@bodyExpansion]="expansionState"
->
-    <ng-content select="[childrenContent]"></ng-content>
-</div>
+        <ng-content select="[childrenContent]"></ng-content>
+    </div>
+}
