--- a/src/app/material/components/card-wrapper/card-wrapper.component.html
+++ b/src/app/material/components/card-wrapper/card-wrapper.component.html
@@ -1,6 +1,8 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title *ngIf="to.cardTitle">{{ to.cardTitle }}</mat-card-title>
+        @if (to.cardTitle) {
+            <mat-card-title>{{ to.cardTitle }}</mat-card-title>
+        }
     </mat-card-header>
     <mat-card-content><ng-container #fieldComponent></ng-container></mat-card-content>
 </mat-card>
