--- a/projects/editor/src/lib/property/chip-list-property/chip-list-property.component.html
+++ b/projects/editor/src/lib/property/chip-list-property/chip-list-property.component.html
@@ -41,7 +41,7 @@
             <mat-label>{{ property.name ? property.name : property.key }}</mat-label>
         }
         <mat-chip-grid #chipList>
-            @for (option of selectedOptions$ | async; track option) {
+            @for (option of selectedOptions$ | async; track $index) {
                 <mat-chip-row
                     selectable
                     (removed)="onRemove(option)"
@@ -66,7 +66,7 @@
             class="editor-mat"
             (optionSelected)="onSelected($event)"
         >
-            @for (option of filteredOptions$ | async; track option) {
+            @for (option of filteredOptions$ | async; track $index) {
                 <mat-option [value]="option">
                     {{ option }}
                 </mat-option>
